hphp/hack/test/typecheck/inout/bad_inout_use_arg3.php.exp
File "bad_inout_use_arg3.php", line 15, characters 5-14:
You cannot decorate this argument as inout (Parsing[1002])
